# floria

./: CNAME  Cargo.toml  README.md  TODO  _config.yml
documentation/: design.md  faq.md
scripts/: build-docs
sdk/: Cargo.toml
sdk/assets/wit/: floria-plugins.wit
sdk/src/: bindings.rs  lib.rs  plugin.rs  utils.rs
sdk/src/data/: call_site.rs  entity.rs  id.rs  kind.rs  mod.rs  property.rs
sdk/src/data/any/: delegated.rs
sdk/src/data/entities/: edge.rs  entity.rs  id.rs  instance.rs  kind.rs  metadata.rs  mod.rs  property.rs  vertex.rs
sdk/src/data/expression/: call.rs  cast.rs  conversions.rs  custom.rs  delegated.rs  expression.rs  list.rs  map.rs  mod.rs  utils.rs
sdk/src/data/expression/call/: call.rs  kind.rs  mod.rs
sdk/src/data/expression/de/: deserializer.rs  enum_deserializer.rs  error.rs  map_as_list_deserializer.rs  map_deserializer.rs  mod.rs  seq_deserializer.rs  variant_deserializer.rs
sdk/src/data/expression/macros/: literal.rs  mod.rs  traversal.rs
sdk/src/data/expression/ser/: call.rs  custom.rs  expression.rs  list.rs  map.rs  mod.rs
sdk/src/data/expression/ser/serializer/: error.rs  expression.rs  list.rs  map.rs  mod.rs
sdk/src/data/math/: cast.rs  mod.rs  operations.rs
sdk/src/data/math/number/: conversions.rs  math.rs  mod.rs  number.rs
sdk/src/entities/: edge.rs  entity.rs  instance.rs  metadata.rs  mod.rs  property.rs  vertex.rs
sdk/src/errors/: arguments.rs  math.rs  mod.rs  types.rs
sdk/src/host/: api.rs  conversions.rs  delegated.rs  mod.rs
sdk/src/utils/: assert.rs  depiction.rs  events.rs  http.rs  mod.rs
sdk/src/utils/http/: client.rs  error.rs  mod.rs  utils.rs
(+1 files in other folders)
