[package]
edition = "2024"

name = "floria-plugin-sdk"
description = "Floria plugin SDK"
version = "0.0.5"
rust-version = "1.93"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/floria"
documentation = "https://docs.rs/floria"
authors = ["Tal Liron"]

readme = "../README.md"

categories = ["wasm"] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[dependencies]
duplicate = "2.0.1"
num-traits = "0.2.19"
ordered-float = "5.1.0"
serde = { optional = true, version = "1.0.228", features = ["derive"] }
waki = "0.5.1"
wit-bindgen = "0.51.0"

[features]
serde = ["dep:serde"]

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-wasip2"]
rustdoc-args = ["--cfg", "docsrs"]
