[package]
edition = "2024"

name = "floria-plugin-sdk"
description = "Floria plugin SDK"
version = "0.0.5"
rust-version = "1.91"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/floria"
documentation = "https://docs.rs/floria"
authors = ["Tal Liron"]

readme = "../README.md"

categories = [] # https://crates.io/category_slugs
keywords = [
    "cloud",
    "orchestration",
    "wasm",
    "tosca",
    "khutulun",
]

[dependencies]
duplicate = "2.0.1"
num-traits = "0.2.19"
ordered-float = "5.1.0"
waki = "0.5.1"
wit-bindgen = "0.49.0"

# https://stackoverflow.com/a/61417700
[package.metadata.docs.rs]
all-features = true
targets = ["wasm32-wasip2"]
rustdoc-args = ["--cfg", "docsrs"]
